fix kpi entry bug

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,10 +26,10 @@
 
     <div class="roles">
       <div class="item">
-        <a href="<%= new_kpi_entry_path%>"><i class="icon-upload-alt"></i></a>
+        <a href="<%= kpi_entries_path%>"><i class="icon-upload-alt"></i></a>
 
         <p><%= t 'manage.user.role.user'%></p>
-        <a href="<%= new_kpi_entry_path%>"><%= t 'welcome.entrys.kpi_entry'%></a>
+        <a href="<%= kpi_entries_path%>"><%= t 'welcome.entrys.kpi_entry'%></a>
       </div>
       <div class="item">
         <a href="<%= analyse_kpi_entries_path %>"><i class="icon-bar-chart"></i></a>
