assign kpi by category

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -156,10 +156,12 @@
   <div id="assign-kpi" class="assign-kpi" special="user">
 
     <div class="assign-kpi-left" special="user" id="assign-kpi-options">
-      <div class="select-div">
+      <div class="select-div" style="left: 35%; width: 300px;">
         <select class="chosen-select" data-placeholder="<%= t 'manage.kpi.category' %>" id="kpi-category">
         </select>
+        <input type="button" value="<%= t 'manage.base.assign_all_kpi' %>" class="btn btn-primary" style="width: 75px; display: inline-block;" id="assign-kpi-category-btn"/>
       </div>
+
       <ul id="assign-kpi-list">
 
       </ul>
