--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -18,6 +18,9 @@
 				<li>
 					<a href="<%= admin_kpi_templates_path%>">Kpi</a>
 				</li>
+              <li>
+                <a>Setting</a>
+              </li>
 			</ul>
 		</div>
 
