--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -19,7 +19,7 @@
 					<a href="<%= admin_kpi_templates_path%>">Kpi</a>
 				</li>
               <li>
-                <a>Setting</a>
+                <a href="<%= version_admin_settings_path%>">Setting</a>
               </li>
 			</ul>
 		</div>
