--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -41,7 +41,7 @@
         data.analysis.entity_group_id = "132";
         data.analysis.entity_group_name = "Local";
         data.analysis.start_time="2014-02-26";
-        data.analysis.end_time="'2014-03-12'";
+        data.analysis.end_time="2014-03-12";
         //data.average="true";
         data.analysis.frequency="100";
 
