fix email address

--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -51,7 +51,7 @@
         data.email = {};
         data.email.content = '';
         data.email.receivers = [];
-        data.email.receivers[0] = 'tianyi.shen@cz-tek.com';
+        data.email.receivers[0] = 'song.wang@cz-tek.com';
         data.email.title = 'test';
 
         $.ajax({
