--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -45,8 +45,8 @@
         //data.average="true";
         data.analysis.frequency="100";
 
-        data.attachments = [];
-        data.attachments[0] = {oriName:'2B984145-D107-4C2E-8930-3383E284B2C0.jpeg',pathName:'f24371dd-6b32-4e81-8a14-7cbe64d76d26.jpeg'};
+//        data.attachments = [];
+//        data.attachments[0] = {oriName:'2B984145-D107-4C2E-8930-3383E284B2C0.jpeg',pathName:'f24371dd-6b32-4e81-8a14-7cbe64d76d26.jpeg'};
 
         data.email = {};
         data.email.content = '';
