--- a/app/views/layouts/fullsize.html.erb
+++ b/app/views/layouts/fullsize.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>IFEpm</title>
+  <title>ClearInsight</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
 
