--- a/app/views/layouts/admin_login.html.erb
+++ b/app/views/layouts/admin_login.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
      <head>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-          <title>IFEpm</title>
+          <title>ClearInsight</title>
           <%= stylesheet_link_tag    "application", :media => "all" %>
      </head>
      <body>
