--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
      <head>
-          <title>IFEpm</title>
+          <title>ClearInsight</title>
           <%= stylesheet_link_tag    "application", :media => "all" %>
           <%= javascript_include_tag "application" %>
           <%= csrf_meta_tags %>
