--- a/app/views/layouts/pure.html.erb
+++ b/app/views/layouts/pure.html.erb
@@ -2,7 +2,7 @@
 <html>
      <head>
 
-          <title>IFEpm</title>
+          <title>ClearInsight</title>
           <%= javascript_include_tag "jquery-1.8.2.min.js"%>
           <%= javascript_include_tag "wayne-base.js"%>
           <%= javascript_include_tag "i18n.js"%>
