--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -23,6 +23,9 @@
           <li>
             <a href="<%= users_path %>"><%= t 'menu.user' %></a>
           </li>
+          <li>
+            <a href="/users/applications">OAuth</a>
+          </li>
         </ul>
 	</li>
     <%end%>
