add kpi entry guard

--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -24,7 +24,7 @@
             <a href="<%= users_path %>"><%= t 'menu.user' %></a>
           </li>
           <li>
-            <a href="/users/applications">OAuth</a>
+            <a href="/oauth/applications">OAuth</a>
           </li>
         </ul>
 	</li>
