--- a/app/views/doorkeeper/applications/index.html.erb
+++ b/app/views/doorkeeper/applications/index.html.erb
@@ -14,7 +14,7 @@ input[type=submit] {
     <thead>
       <tr>
         <th>Name</th>
-        <th>Callback url</th>
+        <th>Access Token</th>
         <th></th>
         <th></th>
       </tr>
@@ -23,7 +23,7 @@ input[type=submit] {
       <% @applications.each do |application| %>
         <tr id="application_<%= application.id %>">
           <td><%= link_to application.name, [:oauth, application] %></td>
-          <td><%= application.redirect_uri %></td>
+          <td><%= application.access_tokens.first.token %></td>
           <td><%= link_to 'Edit', edit_oauth_application_path(application) %></td>
           <td><%= render 'delete_form', application: application %></td>
         </tr>
