--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -66,10 +66,9 @@
       </div>
     </section>
     <section class="solid">
-      <h3><%= t 'manage.base.next' %></h3>
+      <h3>什么是输入点？</h3>
+      <p>输入点是组织内部管理kpi数据的最小单位</p>
 
-      <p><%= t 'manage.department.desc.next_desc' %> </p>
-      <a class="btn btn-primary" id="dashboard-full-size" href="<%= users_path %>"><%= t 'manage.user.desc.manage' %></a>
     </section>
 
   </aside>
