--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -470,3 +470,20 @@
     padding:6px 0px;
     margin:8px 12px 0 2px;
 }
+/*14.3.20*/
+.manage-kpi-navi>section:first-of-type{
+    position:relative;
+}
+.manage-kpi-navi>section:first-of-type:after{
+    content:"------------------ OR ------------------";
+    position:absolute;
+    left:0px;
+    bottom:-10px;
+    right:0px;
+    text-align:center;
+    font-size:15px;
+    color:#9d9d9d;
+}
+.manage-kpi-navi>section:nth-of-type(2){
+    border-top:none;
+}
