--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -29,7 +29,7 @@
           </div>
      </div>
 
-     <aside class="content-right-nav" name='category' id="content-right-nav">
+     <aside class="content-right-nav manage-kpi-navi" name='category' id="content-right-nav">
           <section class="solid">
                <h3><%= t 'manage.kpi.desc.create'%></h3>
                <p>
@@ -45,11 +45,13 @@
                <a class="btn btn-primary" id="kpi-library-btn"><%= t 'manage.kpi.desc.choose_now'%></a>
           </section>
           <section class="solid">
-               <h3><%= t 'manage.base.next'%></h3>
+               <h3>什么是KPI？</h3>
                <p>
-                 <%= t 'manage.kpi.desc.next_desc'%>
+                 KPI是企业关键绩效指标(KPI：Key Performance Indicator)是通过对组织内部流程的输入端、输出端的关键参数进行设
+                 置、取样、计算、分析，衡量流程绩效的一种目标式量化管理指标，是把企业的战略目标分解为可操作的工作目标的工具，是企
+                 业绩效管理的基础。
                </p>
-               <a class="btn btn-primary " href="<%= entities_path%>"><%= t 'manage.department.desc.manage'%></a>
+
           </section>
      </aside>
 </div>
