--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -12,16 +12,19 @@
 	<body>
 		<div>
 			<ul>
-				<li>
-					<a href="<%= admin_kpi_category_templates_path%>">KPICategory</a>
-				</li>
-				<li>
-					<a href="<%= admin_kpi_templates_path%>">Kpi</a>
-				</li>
+              <li>
+                <a href="<%= admin_kpi_category_templates_path%>">KPICategory</a>
+              </li>
+              <li>
+                <a href="<%= admin_kpi_templates_path%>">Kpi</a>
+              </li>
               <li>
                 <a href="<%= version_admin_settings_path%>">Setting</a>
               </li>
-			</ul>
+              <li>
+                <a href="<%= admin_dashboards_path%>">Dashboards</a>
+              </li>
+            </ul>
 		</div>
 
 		<div class="wrap-page">
