use change password

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
 
 *= require STYLE
+*= require base
 
 *= require datepicker
 *= require datetimepicker
@@ -23,6 +24,7 @@
 *= require 2_column_right_nav
 *= require jquery.gridster
 *= require index
+*= require account
 *= require Manage
 *= require Manage-kpi
 *= require Manage-user
