--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,34 @@
-
-
 <div class="account-block">
-  <p class="user-name">Your Name:<%= @user.first_name%></p>
-  <input type="text" placeholder="旧密码"/>
-  <input type="password" placeholder="新密码"/>
-  <input type="password" placeholder="确认新密码"/>
-  <a class="btn btn-primary finish-change">完成修改</a>
+  <input id="old-pwd" type="text" placeholder="<%= I18n.t "auth.view.old_pwd"%>"/>
+  <input id="new-pwd" type="password" placeholder="<%= I18n.t "auth.view.new_pwd"%>"/>
+  <input id="new-pwd-cfm" type="password" placeholder="<%= I18n.t "auth.view.new_pwd_cfm"%>"/>
+  <a class="btn btn-primary finish-change" onclick="change_password()"><%= I18n.t "auth.view.cfm_change"%></a>
 </div>
+<script language="JavaScript" type="text/javascript">
+  function change_password(){
+      var data = {};
+      data.password = $("#old-pwd").val();
+      data.new_password = $("#new-pwd").val();
+      data.new_password_confirmation = $("#new-pwd-cfm").val();
+
+      if(!data.password || !data.new_password || !data.new_password_confirmation)
+      {
+          MessageBox("Please fill all the input","top","warning");
+      }else{
+          $.ajax({
+              url:"/users/change_password",
+              data:data,
+              type:"POST",
+              dataType:"json",
+              success:function(data){
+                  if(data.result){
+                      MessageBox(data.content,"top","success");
+                      location.reload();
+                  }else{
+                      MessageBox(data.content,"top","warning");
+                  }
+              }
+          });
+      }
+  }
+</script>
