--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,10 +13,10 @@
 
       if(!data.password || !data.new_password || !data.new_password_confirmation)
       {
-          MessageBox("Please fill all the input","top","warning");
+          MessageBox(I18n.t('auth.msg.fill_blank'),"top","warning");
       }else{
           $.ajax({
-              url:"/users/change_password",
+              url:"/subscriptions/change_password",
               data:data,
               type:"POST",
               dataType:"json",
