--- a/app/views/kpis/_new.html.erb
+++ b/app/views/kpis/_new.html.erb
@@ -28,7 +28,7 @@
           </div>
 
           <input type="checkbox" id="is-calcu-check"/>
-          <label><%= t 'manage.kpi.calculate_type'%></label>
+          <label><%= t 'manage.kpi.is_calculate_type'%></label>
 
           <div class="calculate-type-box" id="calculate-type-box">
                <div class="select-div">
