--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,7 @@
 *= require 2_column_right_nav
 *= require jquery.gridster
 *= require index
+*= require account
 *= require Manage
 *= require Manage-kpi
 *= require Manage-user
