--- a/app/views/admin/tenants/edit.html.erb
+++ b/app/views/admin/tenants/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @tenant %> |
-<%= link_to 'Back', @admin_tenants_path %>
+<%= link_to 'Back', admin_tenants_path %>
