--- a/app/views/admin/tenants/_form.html.erb
+++ b/app/views/admin/tenants/_form.html.erb
@@ -1,4 +1,4 @@
-<%=form_for(@tenant,:url=>admin_tenant_path) do |f| %>
+<%= form_for([:admin, @tenant]) do |f| %>
     <% if @tenant.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@tenant.errors.count, "error") %> prohibited this tenant from being saved:</h2>
@@ -15,6 +15,11 @@
     <div class="field">
       <%= f.label :company_name %>
       <%= f.text_field :company_name %>
+    </div>
+
+    <div class="field">
+      <%= f.label :expire_at %>
+      <%= f.text_field :expire_at %>
     </div>
 
     <div class="actions">
