--- a/app/views/admin/tenants/show.html.erb
+++ b/app/views/admin/tenants/show.html.erb
@@ -1,60 +1,25 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Description:</b>
-  <%= @admin_kpi_template.description %>
+  <b>Company Name:</b>
+  <%= @tenant.company_name %>
 </p>
 
 <p>
-  <b>Name:</b>
-  <%= @admin_kpi_template.name %>
+  <b>Super User:</b>
+  <%= @tenant.super_user.email %>
 </p>
 
 <p>
-  <b>Unit:</b>
-  <%= @admin_kpi_template.unit %>
+  <b>Created At:</b>
+  <%= @tenant.created_at %>
 </p>
 
 <p>
-  <b>Frequency:</b>
-  <%= @admin_kpi_template.frequency %>
-</p>
-
-<p>
-  <b>Target:</b>
-  <%= @admin_kpi_template.target %>
-</p>
-
-<p>
-  <b>Is calculated:</b>
-  <%= @admin_kpi_template.is_calculated %>
-</p>
-
-<p>
-  <b>Direction:</b>
-  <%= @admin_kpi_template.direction %>
-</p>
-
-<p>
-  <b>Period:</b>
-  <%= @admin_kpi_template.period %>
-</p>
-
-<p>
-  <b>Formula:</b>
-  <%= @admin_kpi_template.formula %>
-</p>
-
-<p>
-  <b>Formula string:</b>
-  <%= @admin_kpi_template.formula_string %>
-</p>
-
-<p>
-  <b>Admin kpi category template:</b>
-  <%= @admin_kpi_template.admin_kpi_category_template.name %>
+  <b>Expire At:</b>
+  <%= @tenant.expire_at %>
 </p>
 
 
-<%= link_to 'Edit', edit_admin_kpi_template_path(@admin_kpi_template) %> |
-<%= link_to 'Back', admin_kpi_templates_path %>
+<%= link_to 'Edit', edit_admin_tenant_path(@tenant) %> |
+<%= link_to 'Back', admin_tenants_path %>
