--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -53,7 +53,7 @@
   </nav>
   <ul class="nav-user-part">
     <li>
-      <a href="\user\<%= current_user.id%>"><i class="icon-user" title="<%= current_user.first_name %>">  </i></a>
+      <a href="\users\<%= current_user.id%>"><i class="icon-user" title="<%= current_user.first_name %>">  </i></a>
     </li>
     <%= render partial: 'shares/locale' %>
     <li class='empty'><a>
