--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -24,6 +24,9 @@
     <li>
       <a href="<%= version_admin_settings_path %>">Setting</a>
     </li>
+    <li>
+      <a href="<%= admin_dashboards_path%>">Dashboards</a>
+    </li>
   </ul>
 </div>
 
