--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -6,13 +6,10 @@
 
 <h1>&nbsp;</h1>
 <h2>Dashboards Upload</h2>
-<p id="notice">
-  <%= notice %>
-</p>
-<h3>上传/更新数据</h3>
+<h3>shang</h3>
 <div>
-  上传数据文件：
-  <input id="item-data-uploader" type="file" name="files[]" data-url="/admin/dashboards/import_dashboards" >
+  上传Dashboards文件：
+  <input id="dashboards-upload" type="file" name="files[]" data-url="/admin/dashboards/import_dashboards">
   <div class="abstractblock" id="item-data-uploader-preview" style="display:none;"></div>
 </div>
 <%= render :partial => "shares/handling_msg_box", :locals => { :handlemsg => "处理中..." } %>
