admin upload dashboard

--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,15 +1,19 @@
 <script type="text/javascript">
     $(function() {
-        data_upload("#item-data-uploader");
+        dashboard_upload();
     });
 </script>
 
 <h1>&nbsp;</h1>
 <h2>Dashboards Upload</h2>
-<h3>shang</h3>
 <div>
-  上传Dashboards文件：
-  <input id="dashboards-upload" type="file" name="files[]" data-url="/admin/dashboards/import_dashboards">
-  <div class="abstractblock" id="item-data-uploader-preview" style="display:none;"></div>
+	上传Dashboards文件：
+	<input id="dashboards-upload" type="file" name="files[]" data-url="/admin/dashboards/import_dashboards">
+	<div class="abstractblock" id="item-data-uploader-preview" style="display:block;">
+		<p></p>
+		<a></a>
+	</div>
 </div>
-<%= render :partial => "shares/handling_msg_box", :locals => { :handlemsg => "处理中..." } %>
+<% content_for :javascript_includes do%>
+  <%= javascript_include_tag "dashboard_upload"%>
+<%end%>
