--- a/app/views/admin/kpi_templates/import.html.erb
+++ b/app/views/admin/kpi_templates/import.html.erb
@@ -15,3 +15,4 @@
 </div> 
 <%= link_to '返回', admin_kpi_templates_path%>
 <%= render :partial => "shares/handling_msg_box", :locals => { :handlemsg => "处理中..." } %>
+<a href="/files/template/admin_kpi_template.csv">Download Template</a>
