--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -32,6 +32,9 @@
     <li>
       <a href="<%= admin_contacts_path %>">Contact</a>
     </li>
+    <li>
+      <a href="<%= admin_entity_contacts_path %>">EntityContact</a>
+    </li>
   </ul>
 </div>
 <hr>
