--- a/app/views/admin/entity_contacts/import.html.erb
+++ b/app/views/admin/entity_contacts/import.html.erb
@@ -7,12 +7,12 @@
 <p id="notice">
      <%= notice %>
 </p>
-<h3>上传/更新数据</h3>
+<h3>上传/更新 EntityContact</h3>
 <div>
      上传数据文件：
-     <input id="item-data-uploader" type="file" name="files[]" data-url="/admin/kpi_category_templates/updata" >
+     <input id="item-data-uploader" type="file" name="files[]" data-url="/admin/entity_contats/updata" >
      <div class="abstractblock" id="item-data-uploader-preview" style="display:none;"></div>
 </div> 
-<%= link_to '返回', admin_kpi_category_templates_path%>
+<%= link_to '返回', admin_entity_contacts_path%>
 <%= render :partial => "shares/handling_msg_box", :locals => { :handlemsg => "处理中..." } %>
 <a href="/files/template/admin_kpi_category_template.csv">Download Template</a>
