--- a/app/views/admin/contacts/import.html.erb
+++ b/app/views/admin/contacts/import.html.erb
@@ -17,6 +17,6 @@
      <input id="item-data-uploader" type="file" name="files[]" data-url="/admin/contacts/updata" >
      <div class="abstractblock" id="item-data-uploader-preview" style="display:none;"></div>
 </div> 
-<%= link_to '返回', admin_entity_contacts_path%>
+<%= link_to '返回', admin_contacts_path%>
 <%= render :partial => "shares/handling_msg_box", :locals => { :handlemsg => "处理中..." } %>
 <a href="/files/template/contact_template.zip">Download Template</a>
