--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -30,7 +30,7 @@
       <a href="<%= admin_dashboards_path %>">Dashboards</a>
     </li>
     <li>
-      <a href="<%= admin_contacts_path %>">Contact</a>
+      <a href="<%= admin_users_path %>">User</a>
     </li>
     <li>
       <a href="<%= admin_entity_contacts_path %>">EntityContact</a>
