--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -13,8 +13,8 @@
         </div>
     <% end %>
     <div class="field">
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name %>
     </div>
 
     <div class="field">
