--- a/app/views/dashboards/fullsize.html.erb
+++ b/app/views/dashboards/fullsize.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <% content_for :javascript_includes do%>
-
+    <%= javascript_include_tag "2_column_right_nav"%>
 
     <%= javascript_include_tag "highcharts.js"%>
     <%= javascript_include_tag "highcharts-more.js"%>
