fix dashboard bug

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -189,6 +189,9 @@
   <%= javascript_include_tag "exporting.extend.src.js"%>
   <%= javascript_include_tag "jquery.gridster.js"%>
   <%= javascript_include_tag "jquery.gridster.with-extras.js"%>
+  <%= javascript_include_tag "bootstrap-datepicker.js"%>
+  <%= javascript_include_tag "bootstrap-datetimepicker.min.js"%>
+  <%= javascript_include_tag "date_picker_template.js"%>
   
   <%= javascript_include_tag "ifepm.activeSelector.js"%>  
   <%= javascript_include_tag "ifepm.text.js"%>
