--- a/app/views/kpi_properties/index.html.erb
+++ b/app/views/kpi_properties/index.html.erb
@@ -5,10 +5,12 @@
     <th></th>
     <th></th>
     <th></th>
+    <th></th>
   </tr>
 
 <% @kpi_properties.each do |kpi_property| %>
   <tr>
+    <td><%= kpi_property.name%></td>
     <td><%= link_to 'Show', kpi_property %></td>
     <td><%= link_to 'Edit', edit_kpi_property_path(kpi_property) %></td>
     <td><%= link_to 'Destroy', kpi_property, method: :delete, data: { confirm: 'Are you sure?' } %></td>
