--- a/app/assets/stylesheets/Analytic-main.css
+++ b/app/assets/stylesheets/Analytic-main.css
@@ -168,6 +168,9 @@ div[title='analy-view-select'] {
     width: 100%;
     height: 70px;
     border-collapse: collapse;
+    position:absolute;
+    left:0px;
+    transition:left 0.35s ease-out;
 }
 
 .chart-type-alternate td {
@@ -213,23 +216,16 @@ div[title='analy-view-select'] {
 /*td.analytics-chart-scatter {*/
     /*background-position: center -313px;*/
 /*}*/
-
+#chart-main-middle{
+    left:0px;
+    transition:left 0.35s ease-out;
+}
 .chart-container{
     position:relative;
     left:0;
     transition:left 0.35s ease-out;
 }
-.chart-point-detail{
-    position:absolute;
-    top:0px;
-    bottom:57px;
-    left:-300px;
-    width:250px;
-    overflow-y:auto;
-    padding:5px 25px;
-    border-right:1px dotted #ddd;
-    transition:left 0.35s ease-out;
-}
+
 .chart-detail-table{
     width:100%;
     color:rgba(0,0,0,0.4);
@@ -251,23 +247,17 @@ div[title='analy-view-select'] {
 }
 .chart-detail-close{
     cursor:pointer;
-    text-align:center;
-    position:relative;
-    top:40px;
-    left:50%;
-    width:150px;
-    margin-left:-75px;
-    padding:5px 0;
-    background-color:#eee;
-    border-radius:2px;
-    -webkit-border-radius:2px;
-    -moz-border-radius:2px;
-    color:rgba(0,0,0,0.5);
-    transition:background-color 0.25s ease-out,color 0.25s ease-out;
+    color:#000;
+    pointer-events:auto;
+    transition:color 0.25s ease-out;
+    position:absolute;
+    right:15px;
+    top:10px;
+    font-size:19px;
+    z-index:100
 }
 .chart-detail-close:hover{
-    background-color:rgba(238,238,238,0.7);
-    color:rgba(0,0,0,0.4);
+    color:rgba(0,0,0,0.5);
 }
 /************************************************************************** chart detail
 ****************************************************************************************/
@@ -288,4 +278,99 @@ div[title='analy-view-select'] {
 .tcr-trend.low{
     color:#fa4545;
     background-position:133px -81px;
+}
+/************************************************************************** group detail
+****************************************************************************************/
+.chart-point-detail{
+    position:absolute;
+    top:0px;
+    bottom:0px;
+    left:-400px;
+    width:350px;
+    overflow-y:auto;
+    padding:5px 25px;
+    transition:left 0.35s ease-out;
+    box-shadow:-4px 0 3px rgba(0, 0, 0, 0.1) inset;
+    background:rgba(236,236,236,0.5);
+    background-size:cover;
+}
+.chart-point-detail .chosen-container{
+    position:relative;
+    left:50%;
+    top:21px;
+    margin-left:-125px;
+}
+.chart-point-detail .chart-part{
+    margin-top:45px;
+}
+.chart-point-detail .chart-part ul{
+    padding:0px 5px 0 0;
+    margin:0px 0 0 5px;
+    list-style: none;
+    width:130px;
+    height:200px;
+    overflow-y:auto;
+}
+.chart-point-detail .chart-part ul li{
+    width:100%;
+    font-size:13px;
+    padding:2px 0;
+}
+.chart-point-detail .chart-part ul li span{
+    display:inline-block;
+}
+.chart-point-detail .chart-part ul li span:first-of-type{
+    width:70%;
+}
+.chart-point-detail .chart-part ul li span:last-of-type{
+    width:30%;
+    text-align:right;
+    font-weight:bold;
+}
+.chart-point-detail .chart-part canvas,
+.chart-point-detail .chart-part ul{
+    float:left;
+}
+.chart-point-detail .chart-part:after{
+    content:"";
+    clear:both;
+    display:block;
+}
+.group-detail-table{
+    border-top:1px solid rgba(0,0,0,0.15);
+    margin-top:28px;
+    padding-top:8px;
+    max-width:300px;
+    overflow-y:auto;
+    padding-bottom:20px;
+}
+.group-detail-table table{
+    width:100%;
+    border-collapse:collapse;
+}
+
+.group-detail-table table thead td{
+    font-size:14px;
+    padding-bottom:8px;
+    border-bottom:1px solid rgba(0,0,0,0.15);
+}
+.group-detail-table table thead td:last-of-type{
+    width:30px;
+}
+.group-detail-table table tbody{
+    font-size:13px;
+}
+.group-detail-table table tbody td{
+    padding:4px 0px;
+    color:#777;
+    font-weight:200;
+}
+.group-detail-table table tbody tr td:last-of-type i{
+    margin-left:5px;
+}
+.group-detail-table table tbody tr td:last-of-type i.icon-arrow-up{
+    color:#26c826;
+}
+.group-detail-table table tbody tr td:last-of-type i.icon-arrow-down{
+    color:#f75460
 }
