manage kpi attribute ui

--- a/app/assets/stylesheets/STYLE.scss
+++ b/app/assets/stylesheets/STYLE.scss
@@ -85,6 +85,11 @@ $red-hover:#f59b9b;
       background:#f6af6a
     }
   }
+  &.btn-small{
+    display:inline-block;
+    padding:5px 26px;
+    font-size:12px;
+  }
 }
 /*************************************************************  ul
 *********************************************************************************************************/
